--- a/.jshintrc
+++ b/.jshintrc
@@ -80,5 +80,5 @@
     "white"         : false,    // true: Check against strict whitespace and indentation rules
 
     // Custom Globals
-    "predef"        : [ ]       // additional predefined global variables
+    "predef"        : [ "-Promise" ]       // additional predefined global variables
 }
